<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:screenOrientation="portrait"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <View
            android:id="@+id/fake_status_bar"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/tool_bar_user_setting_feedback"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/bg_top_bar"
            app:contentInsetStart="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">


                <Button
                    android:id="@+id/button_user_setting_feedback_back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="-5dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/back_jiantou" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="50dp"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:text="@string/textview_title_feedback"
                    android:textColor="@color/white"
                    android:textSize="19dp" />

            </RelativeLayout>
        </android.support.v7.widget.Toolbar>


        <ScrollView
            android:id="@+id/scrollView01_setting_aboutus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/comm_background"
            android:overScrollMode="never"
            android:scrollbars="none">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">




                <!--功能选项2个-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_top_bar"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_marginBottom="20dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@mipmap/feedback_img01"
                        />


                    <TextView
                        android:layout_marginRight="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:gravity="center_vertical|left"
                        android:text="@string/textview_title_feedback_tip01"
                        android:lineSpacingExtra="5dp"
                        android:textColor="#ccffffff"
                        android:textSize="15dp" />


                </LinearLayout>


                <EditText
                    android:id="@+id/editText_feedback_01"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"

                    android:textSize="15dp"
                    android:textColor="#dd333333"

                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="top|left"

                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"

                    android:hint="@string/textview_title_feedback_hind01"
                    android:background="@drawable/line_edittext_normal_back"
                    />




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:text="@string/textview_title_feedback_tip02"
                        android:textColor="#dd333333"
                        android:textSize="15dp" />

                    <EditText
                        android:id="@+id/editText_feedback_02"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginRight="15dp"


                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"

                        android:textSize="15dp"
                        android:textColor="#dd333333"
                        android:hint="@string/textview_title_feedback_hind02"
                        android:background="@drawable/line_edittext_normal_back"
                        />


                </LinearLayout>


                <Button
                    android:id="@+id/button_feedback_01"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"


                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"


                    android:layout_centerHorizontal="true"
                    android:text="@string/textview_title_feedback_sub"
                    android:textSize="18dp"
                    android:textColor="@color/white"
                    android:background="#00D78D"/>



            </LinearLayout>


        </ScrollView>






    </LinearLayout>

</android.support.v4.widget.DrawerLayout>