<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:screenOrientation="portrait"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/fake_status_bar"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/tool_bar_applock"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/bg_top_bar"
            app:contentInsetStart="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">


                <Button
                    android:id="@+id/button_applock_back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="-5dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/back_jiantou" />

                <Button
                    android:id="@+id/button_applock_setting"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="-5dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/user_setting"/>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="50dp"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:text="@string/textview_title_applock"
                    android:textColor="@color/white"
                    android:textSize="19dp" />

            </RelativeLayout>
        </android.support.v7.widget.Toolbar>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView_applock_title_01"
                android:layout_alignParentTop="true"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:text="@string/textview_title_applock_sub_tip01"
                android:gravity="center|left"
                android:textColor="#66000000"
                />

            <Button
                android:id="@+id/button_applock_addapp"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_centerHorizontal="true"
                android:text="@string/button_applock_addapp"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:background="#00D78D"/>


            <ImageView
                android:id="@+id/imageView_applock_tips01"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:paddingBottom="110dp"
                android:layout_centerInParent="true"
                android:alpha="0.7"
                android:src="@mipmap/applock_no_img"
                />

            <TextView
                android:id="@+id/textView_applock_tips01"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:paddingTop="40dp"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:text="@string/textview_title_applock_sub_tip02"
                android:textColor="#88999999"
                android:textSize="16dp" />



            <com.victor.loading.rotate.RotateLoading
                android:id="@+id/rotateloading_applock_loding"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:gravity="center"
                android:layout_centerInParent="true"
                app:loading_width="3dp"
                app:loading_color="#44777777"/>


            <ListView
                android:id="@+id/listView_applock_01"
                android:layout_below="@+id/textView_applock_title_01"
                android:layout_above="@+id/button_applock_addapp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"
                android:divider="@null"
                android:overScrollMode="never"
                android:descendantFocusability="blocksDescendants"
                >
            </ListView>


        </RelativeLayout>








    </LinearLayout>

</android.support.v4.widget.DrawerLayout>