<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:screenOrientation="portrait"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <View
            android:id="@+id/fake_status_bar"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/tool_bar_user_setting_aboutus"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/bg_top_bar"
            app:contentInsetStart="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">


                <Button
                    android:id="@+id/button_user_setting_aboutus_back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="-5dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/back_jiantou" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="50dp"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:text="@string/textview_title_about"
                    android:textColor="@color/white"
                    android:textSize="19dp" />

            </RelativeLayout>
        </android.support.v7.widget.Toolbar>






        <ScrollView
            android:id="@+id/scrollView01_setting_aboutus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/comm_background"
            android:overScrollMode="never"
            android:scrollbars="none">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">



                <ImageView
                    android:layout_width="match_parent"
                    android:background="@drawable/bg_top_bar"
                    android:layout_height="25dp"/>


                <!--功能选项2个-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_top_bar"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/linearyout_user_setting_aboutus_sub01"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        >

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:src="@mipmap/setting_aboutus_img01"
                            />

                    </LinearLayout>


                    <RelativeLayout
                        android:id="@+id/linearyout_user_setting_aboutus_sub02"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView_aboutus_title"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical|left"
                            android:layout_marginTop="-30dp"
                            android:text="@string/app_name"
                            android:textColor="#ffffff"
                            android:textSize="22.5dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical|left"
                            android:layout_marginTop="30dp"
                            android:text="@string/textview_about_version"
                            android:textColor="#99ffffff"
                            android:textSize="14dp" />

                    </RelativeLayout>

                </LinearLayout>

<!--功能选项三个-->



                <ImageView
                    android:layout_width="match_parent"
                    android:background="@drawable/bg_top_bar"
                    android:layout_height="45dp"/>





                <!--粉丝论坛-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="18dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="18dp"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@mipmap/setting_icon_19"
                        />

                    <TextView
                        android:id="@+id/textView_setting_aboutus_01"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="fill_vertical"
                        android:gravity="center_vertical"
                        android:text="@string/textview_option_about_01"
                        android:textSize="16dp"
                        android:textColor="#444444" />

                </LinearLayout>



                <ImageView
                    android:layout_marginLeft="70dp"
                    android:layout_width="match_parent"
                    android:layout_height="0.6dp"
                    android:background="#19666666"
                    />




                <!--推荐好友-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="18dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="18dp"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@mipmap/setting_icon_20"
                        />

                    <TextView
                        android:id="@+id/textView_setting_aboutus_02"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="fill_vertical"
                        android:gravity="center_vertical"
                        android:text="@string/textview_option_about_02"
                        android:textSize="16dp"
                        android:textColor="#444444" />

                </LinearLayout>



                <ImageView
                    android:layout_marginLeft="70dp"
                    android:layout_width="match_parent"
                    android:layout_height="0.6dp"
                    android:background="#19666666"
                    />




                <!--使用协议-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="18dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="18dp"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@mipmap/setting_icon_21"
                        />

                    <TextView
                        android:id="@+id/textView_setting_aboutus_03"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="fill_vertical"
                        android:gravity="center_vertical"
                        android:text="@string/textview_option_about_03"
                        android:textSize="16dp"
                        android:textColor="#444444" />

                </LinearLayout>



                <ImageView
                    android:layout_marginLeft="70dp"
                    android:layout_width="match_parent"
                    android:layout_height="0.6dp"
                    android:background="#19666666"
                    />




                <!--官方网站-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="18dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="18dp"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@mipmap/setting_icon_22"
                        />

                    <TextView
                        android:id="@+id/textView_setting_aboutus_04"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="fill_vertical"
                        android:gravity="center_vertical"
                        android:text="@string/textview_option_about_04"
                        android:textSize="16dp"
                        android:textColor="#444444" />

                </LinearLayout>



                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="15dp"/>


            </LinearLayout>


        </ScrollView>




    </LinearLayout>

</android.support.v4.widget.DrawerLayout>